--- a/AchSmartHome_Management/AchSmartHome_Management/Properties/Resources.resx
+++ b/AchSmartHome_Management/AchSmartHome_Management/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="light" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\pictures\light.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="smoke" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\pictures\smoke.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Std" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\langs\Std.lang;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
