--- a/AchSmartHome_Management/AchSmartHome_Management/files/langs/Eng.lang
+++ b/AchSmartHome_Management/AchSmartHome_Management/files/langs/Eng.lang
@@ -37,7 +37,8 @@ PanelName1=Light Control Panel
 PanelName2=Custom sensors Panel
 PanelName3=Settings Panel
 PanelName4=About Program Panel
-PanelName5=Undefined Panel!
+PanelName5=Wireless Doorbell Panel
+PanelName6=Undefined Panel!
 InsufPrivs=Insufficient Privileges!
 SettingsWarningLine1=To completely change the theme and language
 SettingsWarningLine2=click in this message OK, then
