--- a/AchSmartHome_Management/AchSmartHome_Management/files/langs/Rus.lang
+++ b/AchSmartHome_Management/AchSmartHome_Management/files/langs/Rus.lang
@@ -37,7 +37,8 @@ PanelName1=Панель управления светом
 PanelName2=Панель польз. датчиков
 PanelName3=Панель настроек
 PanelName4=Панель "О программе"
-PanelName5=Неопределённая панель!
+PanelName5=Панель беспроводного звонка
+PanelName6=Неопределённая панель!
 InsufPrivs=Недостаточно привилегий!
 SettingsWarningLine1=Для полного изменения темы и языка
 SettingsWarningLine2=нажмите в этом сообщении OK, затем
