--- a/AchSmartHome_Management/AchSmartHome_Management/files/langs/Eng.lang
+++ b/AchSmartHome_Management/AchSmartHome_Management/files/langs/Eng.lang
@@ -13,6 +13,11 @@ Help=Help
 AboutProg=About Program
 AboutProj=About ASH project
 Register=Register
+LogIn=Log in
+IpAddress=IP Address
+Username=Username
+Password=Password
+UserPasswdError=Username or password is incorrect!
 FlowersWatering=The flowers watered at
 Language=Language
 Theme=Theme
@@ -40,6 +45,7 @@ PanelName4=About Program Panel
 PanelName5=Wireless Doorbell Panel
 PanelName6=Undefined Panel!
 InsufPrivs=Insufficient Privileges!
+ErrorHappened=An error happened!
 SettingsWarningLine1=To completely change the theme and language
 SettingsWarningLine2=click in this message OK, then
 SettingsWarningLine3=the application will be restarted automatically.
