--- a/AchSmartHome_Management/AchSmartHome_Management/files/langs/Rus.lang
+++ b/AchSmartHome_Management/AchSmartHome_Management/files/langs/Rus.lang
@@ -13,6 +13,11 @@ Help=Справка
 AboutProg=О программе
 AboutProj=О проекте ASH
 Register=Регистрация
+LogIn=Вход
+IpAddress=IP-адрес
+Username=Имя пользователя
+Password=Пароль
+UserPasswdError=Неверное имя пользователя или пароль!
 FlowersWatering=Цветы политы в
 Language=Язык
 Theme=Тема
@@ -40,6 +45,7 @@ PanelName4=Панель "О программе"
 PanelName5=Панель беспроводного звонка
 PanelName6=Неопределённая панель!
 InsufPrivs=Недостаточно привилегий!
+ErrorHappened=Произошла ошибка!
 SettingsWarningLine1=Для полного изменения темы и языка
 SettingsWarningLine2=нажмите в этом сообщении OK, затем
 SettingsWarningLine3=приложение автоматически перезапустится.
