--- a/AchSmartHome_Management/AchSmartHome_Management/files/langs/Rus.lang
+++ b/AchSmartHome_Management/AchSmartHome_Management/files/langs/Rus.lang
@@ -39,9 +39,15 @@ MainSensorsButton=Основные
 DateText=Дата
 Name=Название
 Value=Значение
+ExportToXls=Экспортировать в Excel-таблицу
+MainSensorsToolTip1=Показать основные датчики
+MainSensorsToolTip2=Скрыть основные датчики
+Temperature=Температура
+Humidity=Влажность
 WirelessDoorbell=Беспроводной звонок
 DoorbellDateTime=Время звонка: 
 Photos=Фотографии:
+DoorbellActivated=Звонит дверной звонок! Посмотрите фотографии.
 PanelName0=Главная панель управления
 PanelName1=Панель управления светом
 PanelName2=Панель польз. датчиков
@@ -55,3 +61,4 @@ SettingsWarningLine1=Для полного изменения темы и язы
 SettingsWarningLine2=нажмите в этом сообщении OK, затем
 SettingsWarningLine3=приложение автоматически перезапустится.
 ChangingSettingsHeading=Изменение настроек
+GetUpdateResultError=Сервер не вернул важное значение "последнее обноаление"! Фоновый процесс будет завершён.
