--- a/AchSmartHome_Management/AchSmartHome_Management/files/langs/Std.lang
+++ b/AchSmartHome_Management/AchSmartHome_Management/files/langs/Std.lang
@@ -36,12 +36,19 @@ Update=Update
 UpdateAll=Update All
 OtherSensors=Other Sensors
 MainSensorsButton=Main sensors
+MainSensorsToolTip1=Show main sensors
+MainSensorsToolTip2=Hide main sensors
+Temperature=Temperature
+Humidity=Humidity
 DateText=Date
 Name=Name
 Value=Value
+ExportToXls=Export to Excel-spreadsheet
+MainSensorsToolTip=Show main sensors
 WirelessDoorbell=Wireless Doorbell
 DoorbellDateTime=Doorbell rang at: 
 Photos=Photographs:
+DoorbellActivated=The doorbell rings! View photos.
 PanelName0=Main Control Panel
 PanelName1=Light Control Panel
 PanelName2=Custom sensors Panel
@@ -55,3 +62,4 @@ SettingsWarningLine1=To completely change the theme and language
 SettingsWarningLine2=click in this message OK, then
 SettingsWarningLine3=the application will be restarted automatically.
 ChangingSettingsHeading=Changing Settings
+GetUpdateResultError=The server did not return the critical system value "last update"! Background process will be terminated.
