--- a/AchSmartHome_Management/AchSmartHome_Management/Properties/Resources.resx
+++ b/AchSmartHome_Management/AchSmartHome_Management/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="home" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\pictures\home.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="home_tray" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\pictures\home_tray.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="humidity" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\pictures\humidity.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
